# gidra-sr

./: pyproject.toml
gidra/: __main__.py  proto.py
gidra/proxy/: __init__.py  cmdids.py  kcp_socket.py  packet.py
