[tool.poetry]
name = "gidra"
version = "0.1.0"
description = "Genshin Impact Proxy"
authors = ["Mero"]

[tool.poetry.dependencies]
python = "^3.10"
betterproto = {version = "^2.0.0b4", extras = ["compiler"]}
loguru = "^0.6.0"
bottle = "^0.12.21"
requests = "^2.28.1"
Cython = "^0.29.32"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
